package com.efacility.ticketing.model.enums;

public enum Uloga {
    TENANT,
    MANAGER,
    TECHNICIAN
}
